# polars-seq

./: .gitignore  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
codegen/: generate_tables.py
python/polars_seq/: __init__.py  _tables.py
src/: codon_tables.rs  expressions.rs  lib.rs  translate.rs
tests/: conftest.py  test_codons.py  test_golden.py  test_parity.py  test_polars.py
tools/: validate.py
