[package]
name = "polars-seq"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Polars expression plugin for DNA/RNA -> protein translation"

[lib]
name = "_internal"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.54.4", default-features = false }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py310"] }
pyo3-polars = { version = "0.27", features = ["derive"] }
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
