[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "polars-seq"
version = "0.1.1"
description = "Polars expression plugin for translating DNA/RNA to protein, bit-for-bit compatible with BioPython's Seq.translate()"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Chris Thorpe", email = "drchristhorpe@googlemail.com" }]
keywords = [
    "polars",
    "bioinformatics",
    "dna",
    "rna",
    "protein",
    "translation",
    "codon",
    "genetic-code",
    "biopython",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = ["polars>=1.0"]

[project.urls]
Homepage = "https://github.com/drchristhorpe/polars-seq"
Repository = "https://github.com/drchristhorpe/polars-seq"
Changelog = "https://github.com/drchristhorpe/polars-seq/blob/master/CHANGELOG.md"
Issues = "https://github.com/drchristhorpe/polars-seq/issues"

[tool.maturin]
python-source = "python"
module-name = "polars_seq._internal"
features = ["pyo3/extension-module"]
strip = true

[dependency-groups]
dev = [
    "biopython>=1.80",
    "pytest>=8",
    "maturin>=1.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
